Change db with MariaDB

--- a/DatingSite.Data/App.config
+++ b/DatingSite.Data/App.config
@@ -5,17 +5,21 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v13.0" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="MySql.Data.MySqlClient"
+         type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" >
+      </provider>
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatingSiteContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-DatingSite.Web-20170420092311.mdf;Initial Catalog=aspnet-DatingSite;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="'DatingSiteContext" connectionString="Server=localhost; Database=DatingSiteContext;Uid=root;Pwd=" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <remove name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
