--- a/DatingSite.Data/App.config
+++ b/DatingSite.Data/App.config
@@ -5,13 +5,20 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <entityFramework>
-    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
     <providers>
       <provider invariantName="MySql.Data.MySqlClient"
-         type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" >
-      </provider>
+                type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
     </providers>
   </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient"></remove>
+      <add name="MySQL Data Provider"
+           invariant="MySql.Data.MySqlClient"
+           description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data,  Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
   <connectionStrings>
     <add name="'DatingSiteContext" connectionString="Server=localhost; Database=DatingSiteContext;Uid=root;Pwd=" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
