--- a/DatingSite.Data/packages.config
+++ b/DatingSite.Data/packages.config
@@ -7,4 +7,5 @@
   <package id="MySql.ConnectorNET.Entity" version="6.8.3.2" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net461" />
+  <package id="MySql.Server" version="1.1.0.0" targetFramework="net461" />
 </packages>
