--- a/DatingSite.Web/Web.config
+++ b/DatingSite.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DatingSiteContext" connectionString="Server=localhost; Database=DatingSiteContext;Uid=root;Pwd=" providerName="MySql.Data.MySqlClient" />
+  <remove name="LocalMySqlServer" /><add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,7 +22,69 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-  </system.web>
+    <membership defaultProvider="MySqlMembershipProvider">
+      <providers>
+        <clear />
+        <add name="MySqlMembershipProvider"
+
+             type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web"
+
+             connectionStringName="DefaultConnection"
+
+             enablePasswordRetrieval="false"
+
+             enablePasswordReset="true"
+
+             requiresQuestionAndAnswer="false"
+
+             requiresUniqueEmail="true"
+
+             passwordFormat="Hashed"
+
+             maxInvalidPasswordAttempts="5"
+
+             minRequiredPasswordLength="6"
+
+             minRequiredNonalphanumericCharacters="0"
+
+             passwordAttemptWindow="10"
+
+             applicationName="/"
+
+             autogenerateschema="true" />
+      </providers>
+    </membership>
+    <profile>
+      <providers>
+        <clear />
+        <add type="MySql.Web.Security.MySqlProfileProvider, MySql.Web"
+             name="MySqlProfileProvider" applicationName="/"
+             connectionStringName="DefaultConnection"
+             autogenerateschema="true" />
+      </providers>
+    </profile>
+    <roleManager enabled="true" defaultProvider="MySqlRoleProvider">
+      <providers>
+        <clear />
+        <add connectionStringName="DefaultConnection"
+             applicationName="/" name="MySqlRoleProvider"
+             type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"
+             autogenerateschema="true" />
+      </providers>
+    </roleManager>
+    <siteMap defaultProvider="MySqlSiteMapProvider">
+      <providers>
+        <remove name="MySqlSiteMapProvider" />
+        <add name="MySqlSiteMapProvider" type="MySql.Web.SiteMap.MySqlSiteMapProvider, MySql.Web, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+      </providers>
+    </siteMap><webParts>
+      <personalization defaultProvider="MySQLPersonalizationProvider">
+        <providers>
+          <remove name="MySQLPersonalizationProvider" />
+          <add name="MySQLPersonalizationProvider" type="MySql.Web.Personalization.MySqlPersonalizationProvider, MySql.Web, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+        </providers>
+      </personalization>
+    </webParts></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -31,23 +94,23 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -55,7 +118,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -67,11 +130,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" culture="neutral" publicKeyToken="c5687fc88969c44d" />
         <bindingRedirect oldVersion="0.0.0.0-6.9.9.0" newVersion="6.9.9.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -82,7 +149,17 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <provider invariantName="MySql.Data.MySqlClient"
+                type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
     </providers>
   </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient"></remove>
+      <add name="MySQL Data Provider"
+           invariant="MySql.Data.MySqlClient"
+           description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data,  Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
