--- a/DatingSite.Models/DatingSite.Models.csproj
+++ b/DatingSite.Models/DatingSite.Models.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="Picture.cs" />
+    <Compile Include="Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
